# diskscangrok

./: .gitignore  CMakeLists.txt  README.md
cmake/: toolchain-mingw64.cmake
scripts/: build-portable.ps1
src/: main.cpp
src/model/: FileNode.cpp  FileNode.hpp
src/scanner/: MftCache.cpp  MftCache.hpp  MftFlatEntry.cpp  MftFlatEntry.hpp  MftReader.cpp  MftReader.hpp  Scanner.cpp  Scanner.hpp
src/search/: FileIndex.cpp  FileIndex.hpp  Search.cpp  Search.hpp
src/ui/: App.cpp  App.hpp  SearchView.cpp  SearchView.hpp  StatusBar.cpp  StatusBar.hpp  TreeView.cpp  TreeView.hpp
src/util/: FileOperations.cpp  FileOperations.hpp  WindowsPath.cpp  WindowsPath.hpp
tests/: ScannerSmokeTest.cpp  SearchTest.cpp  WindowsPathTest.cpp
